feat: Implementar Value Objects do domínio - CPF com validação completa de dígitos verificadores - Email com validação de formato - StudentId com geração automática de UUID - Status com valores pré-definidos