@@ -1,64 +1,53 @@
 package start.students.core.domain.valueobjects;
 
-public class CPF {
+import lombok.Value;
+import start.students.core.domain.exceptions.DomainException;
 
-    private final String value;
+@Value
+public class CPF {
+    String value;
 
     public CPF(String value) {
-        if (value == null || value.isBlank()) {
-            throw new IllegalArgumentException("CPF não pode ser vazio");
+        if (value == null || value.trim().isEmpty()) {
+            throw new DomainException("CPF não pode ser vazio");
         }
-        String cleanCpf = value.replaceAll("\\D", "");
+
+        String cleanCpf = value.replaceAll("[^0-9]", "");
 
         if (cleanCpf.length() != 11) {
-            throw new IllegalArgumentException("CPF deve ter 11 dígitos");
+            throw new DomainException("CPF deve ter 11 dígitos");
         }
 
-        if (!isValidCPF(cleanCpf)) {
-            throw new IllegalArgumentException("CPF inválido: " + value);
+        if (!isValidCpf(cleanCpf)) {
+            throw new DomainException("CPF inválido");
         }
 
         this.value = cleanCpf;
     }
 
-    private boolean isValidCPF(String cpf) {
-        if (cpf.matches("(\\d)\\1{10}")) return false;
-
-        int sum = 0;
-        int remainder;
-
-        for (int i = 1; i <= 9; i++) {
-            sum += Integer.parseInt(cpf.substring(i - 1, i)) * (11 - i);
+    private boolean isValidCpf(String cpf) {
+        // Verificar se todos os dígitos são iguais
+        if (cpf.chars().distinct().count() == 1) {
+            return false;
         }
 
-        remainder = (sum * 10) % 11;
-        if (remainder == 10 || remainder == 11) remainder = 0;
-        if (remainder != Integer.parseInt(cpf.substring(9, 10))) return false;
+        // Validar dígito verificador
+        int[] digits = cpf.chars().map(c -> c - '0').toArray();
 
-        sum = 0;
-        for (int i = 1; i <= 10; i++) {
-            sum += Integer.parseInt(cpf.substring(i - 1, i)) * (12 - i);
+        int sum1 = 0;
+        for (int i = 0; i < 9; i++) {
+            sum1 += digits[i] * (10 - i);
         }
+        int digit1 = 11 - (sum1 % 11);
+        if (digit1 > 9) digit1 = 0;
 
-        remainder = (sum * 10) % 11;
-        if (remainder == 10 || remainder == 11) remainder = 0;
-        return remainder == Integer.parseInt(cpf.substring(10, 11));
-    }
+        int sum2 = 0;
+        for (int i = 0; i < 10; i++) {
+            sum2 += digits[i] * (11 - i);
+        }
+        int digit2 = 11 - (sum2 % 11);
+        if (digit2 > 9) digit2 = 0;
 
-    public String getValue() {
-        return value;
-    }
-
-    @Override
-    public boolean equals(Object o) {
-        if (this == o) return true;
-        if (o == null || getClass() != o.getClass()) return false;
-        CPF cpf = (CPF) o;
-        return value.equals(cpf.value);
-    }
-
-    @Override
-    public int hashCode() {
-        return value.hashCode();
+        return digits[9] == digit1 && digits[10] == digit2;
     }
 }
