@@ -1,37 +1,25 @@
 package start.students.core.domain.valueobjects;
 
-import java.util.regex.Pattern;
+import lombok.Value;
+import start.students.core.domain.exceptions.DomainException;
 
+@Value
 public class Email {
-    private static final Pattern EMAIL_PATTERN =
-            Pattern.compile("^[A-Za-z0-9+_.-]+@(.+)$");
-
-    private final String value;
+    String value;
 
     public Email(String value) {
-        if (value == null || value.isBlank()) {
-            throw new IllegalArgumentException("Email não pode ser vazio");
+        if (value == null || value.trim().isEmpty()) {
+            throw new DomainException("Email não pode ser vazio");
         }
-        if (!EMAIL_PATTERN.matcher(value).matches()) {
-            throw new IllegalArgumentException("Email inválido: " + value);
+
+        if (!isValidEmail(value.trim())) {
+            throw new DomainException("Email inválido");
         }
-        this.value = value.toLowerCase();
+
+        this.value = value.trim().toLowerCase();
     }
 
-    public String getValue() {
-        return value;
-    }
-
-    @Override
-    public boolean equals(Object o) {
-        if (this == o) return true;
-        if (o == null || getClass() != o.getClass()) return false;
-        Email email = (Email) o;
-        return value.equals(email.value);
-    }
-
-    @Override
-    public int hashCode() {
-        return value.hashCode();
+    private boolean isValidEmail(String email) {
+        return email.matches("^[A-Za-z0-9+_.-]+@([A-Za-z0-9.-]+\\.[A-Za-z]{2,})$");
     }
 }
